@@ -312,4 +312,27 @@ public class SessionTest {
 
   }
 
+  @Test
+  public void testIdempotentClose() throws IOException {
+
+    final ISession session = Session.beginSession(TEST_EXISTING_PATH);
+
+    final IWriteTransaction wtx = session.beginWriteTransaction();
+    TestDocument.create(wtx);
+    wtx.commit();
+    wtx.close();
+    wtx.close();
+
+    final IReadTransaction rtx = session.beginReadTransaction();
+    assertEquals(12L, rtx.getRevisionSize());
+    assertEquals(true, rtx.isSelected());
+    assertEquals(IConstants.NULL_KEY, rtx.moveTo(12L));
+    assertEquals(false, rtx.isSelected());
+    rtx.close();
+    rtx.close();
+
+    session.close();
+    session.close();
+  }
+
 }
